--- a/index.html
+++ b/index.html
@@ -20,16 +20,21 @@
         Group for plants 
     </p>
 
-    <ul role="toolbar">
-        <li><button aria-setsize="4" aria-posinset="1">Button 1</button></li>
-        <li><button aria-setsize="4" aria-posinset="2">Button 2</button></li>
-        <li><button aria-setsize="4" aria-posinset="3">Button 3</button></li>
-        <li><button aria-setsize="4" aria-posinset="4">Button 4</button></li>
-    </ul>
+    <div class="btn-group">
+        <button>Apple</button>
+        <button>Samsung</button>
+        <button>Sony</button>
+      </div> 
 
+    <input list="browsers">
 
-    
-
+    <datalist id="Plant">
+      <option value="Rose">
+      <option value="Flower">
+      <option value="Buttercup">
+      <option value="Opera">
+      <option value="Safari">
+    </datalist> 
 
 </body>
 </html>
