--- a/index.html
+++ b/index.html
@@ -17,24 +17,21 @@
 
     <p>
         <h2>List</h4>
-        Group for plants 
+        <h3>Group for flowers</h3>
     </p>
 
-    <div class="btn-group">
-        <button>Apple</button>
-        <button>Samsung</button>
-        <button>Sony</button>
-      </div> 
+    <!-- This is the list (above)-->
+        <br>
+        <label>Enter: </label>
+        <input type="text" name="" id="inp" class="input-default"> 
+        <button type="button" onclick="add()" class="btn btn-success btn-sm m-b-10 m-l-5">Add</button>
 
-    <input list="browsers">
+        <ol>
+            <li>Hello</li>
+        </ol>
 
-    <datalist id="Plant">
-      <option value="Rose">
-      <option value="Flower">
-      <option value="Buttercup">
-      <option value="Opera">
-      <option value="Safari">
-    </datalist> 
+    <script type="text/javascript"></script>
+    
 
 </body>
 </html>
