--- a/index.html
+++ b/index.html
@@ -21,17 +21,16 @@
     </p>
 
     <!-- This is the list (above)-->
-        <br>
-        <label>Enter: </label>
-        <input type="text" name="" id="inp" class="input-default"> 
-        <button type="button" onclick="add()" class="btn btn-success btn-sm m-b-10 m-l-5">Add</button>
+    <br>
+    <label>Enter: </label>
+    <input type="text" name="" id="textBox" class="input-default"> 
+    <button type="button" onclick="Add()" class="btn btn-success btn-sm m-b-10 m-l-5">Add</button>
 
-        <ol>
-            <li>Hello</li>
-        </ol>
+    <ol type="1">
+        <li>Flower</li>
+        <li>Sunny</li>
 
-    <script type="text/javascript"></script>
-    
+    </ol>
 
 </body>
 </html>
