--- a/index.html
+++ b/index.html
@@ -24,13 +24,12 @@
     <br>
     <label>Enter: </label>
     <input type="text" name="" id="textBox" class="input-default"> 
-    <button type="button" onclick="Add()" class="btn btn-success btn-sm m-b-10 m-l-5">Add</button>
+    <button type="button" onclick="Add()" class="ButtonList">Add</button>
 
     <ol type="1">
-        <li>Flower</li>
-        <li>Sunny</li>
-
     </ol>
+
+    <script type="text/javascript" src="script/script.js"></script>
 
 </body>
 </html>
