Link CSS to HTML
Linked the css to html to apply background img on the website

#1

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/GitHubJava/GitHubJava/style.css">
+
+
 </head>
 <body>
 
@@ -26,8 +29,8 @@
         <span onclick="addClick()" class="addTitleAdd">Add</span>
       </div>
       
-      <ol id="ulList">
-      </ol> 
+      <ul id="ulList">
+      </ul> 
 
     <script type="text/javascript" src="script.js"></script>
 
