--- a/index.html
+++ b/index.html
@@ -11,15 +11,10 @@
 </head>
 <body>  
 
-    <h1>To-Do list</h1>
-    <h2>About To-Do list</h2>
-    <p>Her in To-Do list you can write up any type of task you want.
-        It includes check boxes and crossing the texts.
-        You make a group for sorting system for example a group for Plants.
-    </p>
+    <p id="titleStyle">To-Do list</p>
 
     <p>
-        <h2>List</h4>
+        <h2 class>List</h4>
         <h3>Group for flowers</h3>
     </p>
 
@@ -34,7 +29,6 @@
 
       <label class="container">
         <input type="checkbox">
-        <input type="text" minlength="1" maxlength="100" size="60%" placeholder="Add an item">
         <span class="checkmark"></span>
         <br>   
       </label>
