--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <p>
         <h2 class>List</h4>
-        <h3>Group for flowers</h3>
+        <h3 class="listAdd">Group for flowers</h3>
     </p>
 
     <div id="divAdder" class="listAdd">
@@ -26,13 +26,7 @@
       
       <ul id="ulList">
       </ul> 
-
-      <label class="container">
-        <input type="checkbox">
-        <span class="checkmark"></span>
-        <br>   
-      </label>
-
+      
     <script type="text/javascript" src="script.js"></script>
 
 </body>
