--- a/index.html
+++ b/index.html
@@ -11,23 +11,20 @@
 </head>
 <body>  
 
-    <p id="titleStyle">To-Do list</p>
 
-    <p>
-        <h2 class>List</h4>
-        <h3 class="listAdd">Group for flowers</h3>
-    </p>
 
-    <div id="divAdder" class="listAdd">
-        <h2>The TO-DO List</h2>
-        <input type="text" id="addInput" placeholder="Title...">
-        <button onclick="addClick()" class="addTitleAdd">Add</button>
-      </div>
+<p id="titleStyle"><u>To-Do List</u></p>
+
+<div id="divAdder" class="listAdd">
+  <h2>The TO-DO List</h2>
+  <input type="text" id="addInput" placeholder="Title...">
+  <button onclick="addClick()" class="addTitleAdd">Add</button>
+</div>
       
-      <ul id="ulList">
-      </ul> 
+<ul id="ulList">
+  </ul> 
       
-    <script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="script.js"></script>
 
 </body>
 </html>
