New button name
Changed button name from Add to +

#1

--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
 </head>
 <body>  
 
-
-
 <p id="titleStyle"><u>To-Do List</u></p>
 
 <div id="divAdder" class="listAdd">
   <h2>The TO-DO List</h2>
   <input type="text" id="addInput" placeholder="Title...">
-  <button onclick="addClick()" class="addTitleAdd">Add</button>
+  <button onclick="addClick()" class="addTitleAdd">+</button>
 </div>
       
 <ul id="ulList">
