--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <h2>The TO-DO List</h2>
   <input type="text" id="addInput" placeholder="Title...">
   <button onclick="addClick()" class="addTitleAdd">+</button>
+  <input type="checkbox" id="listCheckbox" checked="checked">
 </div>
       
 <ul id="ulList">
