Test codes in html
Added some li elements to research

#1

--- a/index.html
+++ b/index.html
@@ -14,14 +14,19 @@
 <p id="titleStyle"><u>To-Do List</u></p>
 
 <div id="divAdder" class="listAdd">
-  <h2>The TO-DO List</h2>
+  <h2 class="titleHeader">The TO-DO List</h2>
   <input type="text" id="addInput" placeholder="Title...">
   <button onclick="addClick()" class="addTitleAdd">+</button>
-  <input type="checkbox" id="listCheckbox" checked="checked">
 </div>
-      
+
 <ul id="ulList">
-  </ul> 
+  <li>Hit the gym</li>
+  <li class="checked">Pay bills</li>
+  <li>Meet George</li>
+  <li>Buy eggs</li>
+  <li>Read a book</li>
+  <li>Organize office</li>
+</ul>
       
 <script type="text/javascript" src="script.js"></script>
 
