--- a/index.html
+++ b/index.html
@@ -6,27 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-
-
+    <title>To Do List</title>
 </head>
 <body>  
+    <h1 class="title">
+      To Do List
+    </h1>
 
-<p id="titleStyle"><u>To-Do List</u></p>
+    <div class="todoList">
+        <div class="listHeader">
+            <input type="text" class="enterList">
+            <button class="addList"> Add </button>
+        </div>
 
-<div id="divAdder" class="listAdd">
-  <h2 class="titleHeader">The TO-DO List</h2>
-  <input type="text" id="addInput" placeholder="Title...">
-  <button onclick="addClick()" class="addTitleAdd">+</button>
-</div>
+    <div class="task">
+        <!-- <div class="item-completed">
+          <p>new item here</p>
+          <div class="item-btn">
+              <i class="fa-solid
+              fa-pen-to-square"></i>
+              <i class="fa-solid fa-xmark"></i>
+            </div>
+          </div> -->
+        </div>
+    </div>
 
-<ul id="ulList">
-  <li>Hit the gym</li>
-  <li class="checked">Pay bills</li>
-  <li>Meet George</li>
-  <li>Buy eggs</li>
-  <li>Read a book</li>
-  <li>Organize office</li>
-</ul>
+  
       
 <script type="text/javascript" src="script.js"></script>
 
