--- a/index.html
+++ b/index.html
@@ -9,27 +9,19 @@
     <title>To Do List</title>
 </head>
 <body>  
-    <h1 class="title">
-      To Do List
-    </h1>
+  <h1 class="title">
+    To Do List
+  </h1>
 
-    <div class="todoList">
-        <div class="listHeader">
-            <input type="text" class="enterList">
-            <button class="addList"> Add </button>
-        </div>
+  <div class="todoList">
+      <div class="listHeader">
+          <input id="addInput" type="text" class="enterList" placeholder="Title...">
+          <button class="addBtn" onclick="addClick()">Add</button>
+      </div>
+  </div>
 
-    <div class="task">
-        <!-- <div class="item-completed">
-          <p>new item here</p>
-          <div class="item-btn">
-              <i class="fa-solid
-              fa-pen-to-square"></i>
-              <i class="fa-solid fa-xmark"></i>
-            </div>
-          </div> -->
-        </div>
-    </div>
+<ul id="ulList">
+</ul>
 
   
       
